[project]
name = "automl"
version = "0.1.0"
description = ""
authors = [
    {name = "Jenil Shah",email = "shahjenil000@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9.6,<=3.9.21"
dependencies = [
    "pydantic-settings (>=2.8.1,<3.0.0)",
    "streamlit (>=1.43.1,<2.0.0)",
    "pandas (<2.2.0)",
    "ydata-profiling (>=4.13.0,<5.0.0)",
    "streamlit-pandas-profiling (>=0.1.3,<0.2.0)",
    "kaleido (==0.2.1)",
    "pycaret (>=3.3.2,<4.0.0)",
    "xgboost (==2.0.1)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
